my-namespace/my-site-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-site-nginx
  labels:
    app: my-site-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-site-nginx
  template:
    metadata:
      labels:
        app: my-site-nginx
    spec:
      containers:
      - name: my-site-nginx
        image: ashikkhulal/my-site-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-site-nginx-service
spec:
  selector:
    app: my-site-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
